Prevent flickering scroll bar in editor sidebar
Always display scroll bar to prevent infinite scroll bar flicker that
happened when section thumbnails did not fit in sidebar, but once the
scrollbar was displayed thumbnails resized to the reduced side bar
width causing content to fit again.

Also bottom of side bar main section was slightly hidden behind
footer.

--- a/app/assets/stylesheets/pageflow/editor/base.scss
+++ b/app/assets/stylesheets/pageflow/editor/base.scss
@@ -131,8 +131,9 @@
     top: 0;
     left: 0;
     right: 0;
-    bottom: 25px;
+    bottom: 31px;
     overflow: auto;
+    overflow-y: scroll;
   }
 }
 
